[package]
name = "dropship"
version = "0.1.0"
authors = ["Miguel Lumapat <lamppot@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
sha2 = "0.9.2"
simple_logger = "1.11.0"
structopt = { version = "0.3", default-features = false }